--- a/Python/UI/Ui_MainWindow.ui
+++ b/Python/UI/Ui_MainWindow.ui
@@ -346,7 +346,7 @@
         <property name="title">
          <string>Record</string>
         </property>
-        <widget class="QWidget" name="layoutWidget">
+        <widget class="QWidget" name="layoutWidget1">
          <property name="geometry">
           <rect>
            <x>0</x>
